--- a/Notebook/Singly Linked List.ipynb
+++ b/Notebook/Singly Linked List.ipynb
@@ -17,7 +17,8 @@
     "    h. Sort the linked List\n",
     "    i. count the number of nodes in the linked list\n",
     "    j. add a node before a node\n",
-    "    k. add a node after a node"
+    "    k. add a node after a node\n",
+    "    l. Merging two sorted Linked lists"
    ]
   },
   {
@@ -651,6 +652,155 @@
    "metadata": {},
    "source": [
     "# Removing the duplicates from a sorted Singly Linkedlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Remove_Duplicates(linkedlist):\n",
+    "    currentNode = newlist.head\n",
+    "    previousNode = None\n",
+    "    while currentNode !=None:\n",
+    "        if currentNode.data == currentNode.next.data:\n",
+    "            tempNode = currentNode\n",
+    "            previousNode.next = tempNode.next\n",
+    "            tempNode.next = None\n",
+    "            del tempNode\n",
+    "        previousNode = currentNode\n",
+    "        currentNode = currentNode.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    n1 = Node(3)\n",
+    "    n2 = Node(5)\n",
+    "    n3 = Node(5)\n",
+    "    n4 = Node(8)\n",
+    "    n5 = Node(10)\n",
+    "    newlist = LinkedList()\n",
+    "    newlist.insert(n1)\n",
+    "    newlist.insert(n2)\n",
+    "    newlist.insert(n3)\n",
+    "    newlist.insert(n4)\n",
+    "    newlist.insert(n5)\n",
+    "    Remove_Duplicates(newlist)\n",
+    "    newlist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merging Two sorted LinkedList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merging the list1 and list2 into result linkedList\n",
+    "# The two linkedList should be sorted for this kind on arrangement\n",
+    "\n",
+    "def mergeList(list1 , list2 , result):\n",
+    "    currentFirst = list1.head\n",
+    "    currentSecond = list2.head\n",
+    "    while True:\n",
+    "        if currentFirst is None:\n",
+    "            result.insert(currentSecond)\n",
+    "            break\n",
+    "        if currentSecond is None:\n",
+    "            result.insert(currentFirst)\n",
+    "            break\n",
+    "        if currentFirst.data < currentSecond.data:\n",
+    "            currentFirstNext = currentFirst.next\n",
+    "            currentFirst.next = None\n",
+    "            result.insert(currentFirst)\n",
+    "            currentFirst = currentFirstNext\n",
+    "        else:\n",
+    "            currentSecondNext = currentSecond.next\n",
+    "            currentSecond.next = None\n",
+    "            result.insert(currentSecond)\n",
+    "            currentSecond = currentSecondNext\n",
+    "            \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " First List \n",
+      "1\n",
+      "3\n",
+      "4\n",
+      "Second List\n",
+      "2\n",
+      "7\n",
+      "9\n",
+      "The merged List\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    Node1 = Node(1)\n",
+    "    Node2 = Node(3)\n",
+    "    Node3 = Node(4)\n",
+    "    Node4 = Node(2)\n",
+    "    Node5 = Node(7)\n",
+    "    Node6 = Node(9)\n",
+    "    # Inserting nodes in list 1 \n",
+    "    list1 = LinkedList()\n",
+    "    list1.insert(Node1)\n",
+    "    list1.insert(Node2)\n",
+    "    list1.insert(Node3)\n",
+    "    print(\" First List \")\n",
+    "    list1.printlist()\n",
+    "    # Inserting nodes in list 2\n",
+    "    list2 = LinkedList()\n",
+    "    list2.insert(Node4)\n",
+    "    list2.insert(Node5)\n",
+    "    list2.insert(Node6)\n",
+    "    print('Second List')\n",
+    "    list2.printlist()\n",
+    "    # Storing the merged list in result \n",
+    "    result = LinkedList()\n",
+    "    print(\"The merged List\")\n",
+    "    mergeList(list1 , list2 , result)\n",
+    "    result.printlist()\n"
    ]
   },
   {
