stacking in folder

--- a/Notebook/Doubly Linked List.ipynb
+++ b/Notebook/Doubly Linked List.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,24 @@
     "    def __init__(self):\n",
     "        self.head = None\n",
     "        \n",
+    "    def isEmpty(self):\n",
+    "        if self.head is None:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "        \n",
+    "    def listlength(self):\n",
+    "        if self.isEmpty():\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        else:\n",
+    "            currentNode = self.head\n",
+    "            length = 0\n",
+    "            while currentNode is not None:\n",
+    "                length += 1\n",
+    "                currentNode = currentNode.next\n",
+    "            return length\n",
+    "        \n",
     "    def insert_head(self , newNode):\n",
     "        tempNode = self.head\n",
     "        self.head = newNode\n",
@@ -45,13 +63,39 @@
     "        del tempNode\n",
     "        \n",
     "    \n",
-    "    def insertAt(self , newNode):\n",
-    "        pass\n",
+    "    def insertAt(self , newNode , position):\n",
+    "        if self.isEmpty() or self.listlength() < 0 or self.listlength() <= position:\n",
+    "            print('The list either empty or the position is more than listlength')\n",
+    "            return\n",
+    "        else:\n",
+    "            currentNode = self.head\n",
+    "            currentPos = 1\n",
+    "            while True:\n",
+    "                if currentPos == position:\n",
+    "                    newNode.next = currentNode.next\n",
+    "                    currentNode.next = newNode\n",
+    "                    newNode.prev = currentNode.next\n",
+    "                    break\n",
+    "                currentPos +=1\n",
+    "                currentNode = currentNode.next\n",
+    "            \n",
     "    \n",
-    "    def insert_before(self , newNode):\n",
-    "        pass\n",
+    "    def insert_before(self , newNode, markedNode):\n",
+    "        if self.isEmpty():\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        else:\n",
+    "            currentNode = self.head\n",
+    "            while True:\n",
+    "                if currentNode.data is markedNode:\n",
+    "                    newNode.next = previousNode.next\n",
+    "                    previousNode.next = newNode\n",
+    "                    currentNode.prev = newNode.next\n",
+    "                    break\n",
+    "                previousNode = currentNode\n",
+    "                currentNode = currentNode.next\n",
     "    \n",
-    "    def insert_after(self, newNode):\n",
+    "    def insert_after(self, newNode, markedNode):\n",
     "        pass\n",
     "    \n",
     "        \n",
@@ -85,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +176,91 @@
    "source": [
     "ThirdNode = Node('Jake')\n",
     "doublylist.insert_head(ThirdNode)\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doublylist.listlength()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doublylist.isEmpty()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jake\n",
+      "Norm\n",
+      "Rosa\n",
+      "Scully\n"
+     ]
+    }
+   ],
+   "source": [
+    "FourthNode = Node('Rosa')\n",
+    "doublylist.insertAt(FourthNode , 2)\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jake\n",
+      "Norm\n",
+      "Amy\n",
+      "Rosa\n",
+      "Scully\n"
+     ]
+    }
+   ],
+   "source": [
+    "FifthNode = Node('Amy')\n",
+    "doublylist.insert_before(FifthNode , 'Rosa')\n",
     "doublylist.printlist()"
    ]
   },
