added mroe insert functions

--- a/Notebook/Doubly Linked List.ipynb
+++ b/Notebook/Doubly Linked List.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
     "    def insert_head(self , newNode):\n",
     "        tempNode = self.head\n",
     "        self.head = newNode\n",
-    "        newNode.next = tempNode\n",
-    "        newNode.prev = None\n",
+    "        self.head.next = tempNode\n",
+    "        tempNode.prev = self.head\n",
     "        del tempNode\n",
     "        \n",
     "    \n",
@@ -67,14 +67,21 @@
     "        if self.isEmpty() or self.listlength() < 0 or self.listlength() <= position:\n",
     "            print('The list either empty or the position is more than listlength')\n",
     "            return\n",
+    "        if position is 0:\n",
+    "            self.insert_head(newNode)\n",
+    "            return\n",
+    "        if position is self.listlength():\n",
+    "            self.insert()\n",
+    "            return\n",
     "        else:\n",
     "            currentNode = self.head\n",
     "            currentPos = 1\n",
     "            while True:\n",
     "                if currentPos == position:\n",
-    "                    newNode.next = currentNode.next\n",
-    "                    currentNode.next = newNode\n",
-    "                    newNode.prev = currentNode.next\n",
+    "                    currentNode.prev.next = newNode\n",
+    "                    newNode.prev = currentNode.prev\n",
+    "                    newNode.next = currentNode\n",
+    "                    currentNode.prev = newNode\n",
     "                    break\n",
     "                currentPos +=1\n",
     "                currentNode = currentNode.next\n",
@@ -87,16 +94,31 @@
     "        else:\n",
     "            currentNode = self.head\n",
     "            while True:\n",
-    "                if currentNode.data is markedNode:\n",
-    "                    newNode.next = previousNode.next\n",
-    "                    previousNode.next = newNode\n",
-    "                    currentNode.prev = newNode.next\n",
+    "                if currentNode.data == markedNode:\n",
+    "                    currentNode.prev.next = newNode\n",
+    "                    newNode.prev = currentNode.prev\n",
+    "                    newNode.next = currentNode\n",
+    "                    currentNode.prev = newNode\n",
     "                    break\n",
     "                previousNode = currentNode\n",
     "                currentNode = currentNode.next\n",
     "    \n",
     "    def insert_after(self, newNode, markedNode):\n",
-    "        pass\n",
+    "        if self.isEmpty():\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        currentNode = self.head\n",
+    "        previousNode = None\n",
+    "        while True:\n",
+    "            if currentNode.data == markedNode:\n",
+    "                nextNode = currentNode.next #marking the next Node to currentNode\n",
+    "                currentNode.next = newNode \n",
+    "                newNode.prev = currentNode\n",
+    "                newNode.next = nextNode\n",
+    "                nextNode.prev = newNode\n",
+    "                break\n",
+    "            currentNode = currentNode.next\n",
+    "            \n",
     "    \n",
     "        \n",
     "    def insert(self , newNode):\n",
@@ -110,7 +132,7 @@
     "                    break\n",
     "                currentNode = currentNode.next\n",
     "            currentNode.next = newNode\n",
-    "            newNode.prev = currentNode.next\n",
+    "            newNode.prev = currentNode\n",
     "            \n",
     "    def printlist(self):\n",
     "        if self.head is None:\n",
@@ -118,18 +140,28 @@
     "            return\n",
     "        else:\n",
     "            currentNode = self.head\n",
+    "            print('Printing from the beginning')\n",
     "            while True:\n",
     "                if currentNode is None:\n",
     "                    break\n",
     "                print(currentNode.data)\n",
+    "                if currentNode.next is None:\n",
+    "                    reverseNode = currentNode\n",
     "                currentNode = currentNode.next\n",
+    "            print('Printing from the end')\n",
+    "            while True:\n",
+    "                if reverseNode is None:\n",
+    "                    break\n",
+    "                print(reverseNode.data)\n",
+    "                reverseNode = reverseNode.prev\n",
+    "                \n",
     "            \n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,15 +174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing from the beginning\n",
       "Norm\n",
-      "Scully\n"
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n"
      ]
     }
    ],
@@ -160,16 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing from the beginning\n",
       "Jake\n",
       "Norm\n",
-      "Scully\n"
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Jake\n"
      ]
     }
    ],
@@ -181,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +231,7 @@
        "3"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +251,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,17 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing from the beginning\n",
       "Jake\n",
+      "Rosa\n",
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
       "Norm\n",
       "Rosa\n",
-      "Scully\n"
+      "Jake\n"
      ]
     }
    ],
@@ -243,24 +290,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Printing from the beginning\n",
       "Jake\n",
-      "Norm\n",
       "Amy\n",
       "Rosa\n",
-      "Scully\n"
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Rosa\n",
+      "Amy\n",
+      "Jake\n"
      ]
     }
    ],
    "source": [
     "FifthNode = Node('Amy')\n",
     "doublylist.insert_before(FifthNode , 'Rosa')\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Jake\n",
+      "Amy\n",
+      "Rosa\n",
+      "Holt\n",
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Holt\n",
+      "Rosa\n",
+      "Amy\n",
+      "Jake\n"
+     ]
+    }
+   ],
+   "source": [
+    "SixthNode = Node('Holt')\n",
+    "doublylist.insert_after(SixthNode , 'Rosa')\n",
     "doublylist.printlist()"
    ]
   },
