added programs and functions

--- a/Notebook/Doubly Linked List.ipynb
+++ b/Notebook/Doubly Linked List.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +134,65 @@
     "            currentNode.next = newNode\n",
     "            newNode.prev = currentNode\n",
     "            \n",
+    "    def deleteNode(self , markedNode):\n",
+    "        if self.isEmpty():\n",
+    "            print('The list is empty')\n",
+    "            return\n",
+    "        currentNode = self.head\n",
+    "        previousNode = None\n",
+    "        while True:\n",
+    "            if currentNode.data == markedNode:\n",
+    "                tempNode = currentNode\n",
+    "                previousNode.next = currentNode.next\n",
+    "                currentNode.next.prev = previousNode\n",
+    "                del tempNode\n",
+    "                break\n",
+    "            previousNode = currentNode\n",
+    "            currentNode = currentNode.next\n",
+    "            \n",
+    "    def delete_head(self):\n",
+    "        tempNode = self.head\n",
+    "        self.head = tempNode.next\n",
+    "        self.head.prev = None\n",
+    "        del tempNode\n",
+    "        \n",
+    "            \n",
+    "    def deleteAt(self , position):\n",
+    "        if self.isEmpty() or self.listlength()<0:\n",
+    "            print('The linkedList is empty')\n",
+    "            return\n",
+    "        if position == 1:\n",
+    "            self.delete_head()\n",
+    "            return\n",
+    "        currentNode = self.head\n",
+    "        currentPos = 1\n",
+    "        while True:\n",
+    "            if currentPos == position:\n",
+    "                tempNode = currentNode\n",
+    "                currentNode.prev.next = currentNode.next\n",
+    "                currentNode.next.prev = currentNode.prev\n",
+    "                del tempNode\n",
+    "                break\n",
+    "            currentPos +=1\n",
+    "            currentNode = currentNode.next\n",
+    "            \n",
+    "    def deleteEnd(self):\n",
+    "        if self.isEmpty() or self.listlength() <= 0:\n",
+    "            print('THe linkedList is empty')\n",
+    "            return\n",
+    "        if self.listlength() == 1:\n",
+    "            self.delete_head()\n",
+    "            return\n",
+    "        lastNode = self.head\n",
+    "        while True:\n",
+    "            if lastNode.next.next is None:\n",
+    "                lastNode.next.prev = None\n",
+    "                lastNode.next.next = None\n",
+    "                lastNode.next = None\n",
+    "                break\n",
+    "            lastNode = lastNode.next\n",
+    "            \n",
+    "            \n",
     "    def printlist(self):\n",
     "        if self.head is None:\n",
     "            print('The list is None')\n",
@@ -161,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +290,7 @@
        "3"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +310,7 @@
        "False"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +407,335 @@
     "SixthNode = Node('Holt')\n",
     "doublylist.insert_after(SixthNode , 'Rosa')\n",
     "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Jake\n",
+      "Amy\n",
+      "Rosa\n",
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Rosa\n",
+      "Amy\n",
+      "Jake\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist.deleteNode('Holt')\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Amy\n",
+      "Rosa\n",
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Rosa\n",
+      "Amy\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist.delete_head()\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Amy\n",
+      "Norm\n",
+      "Scully\n",
+      "Printing from the end\n",
+      "Scully\n",
+      "Norm\n",
+      "Amy\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist.deleteAt(2)\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Amy\n",
+      "Norm\n",
+      "Printing from the end\n",
+      "Norm\n",
+      "Amy\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist.deleteEnd()\n",
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Reversing a doubly linkedList\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseList(doublylist):\n",
+    "    currentNode = doublylist.head\n",
+    "    while currentNode is not None:\n",
+    "        nextNode = currentNode.next\n",
+    "        currentNode.next = currentNode.prev\n",
+    "        currentNode.prev = nextNode\n",
+    "        if currentNode.prev is None:\n",
+    "            doublylist.head = currentNode\n",
+    "        currentNode = nextNode\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reverseList(doublylist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "Norm\n",
+      "Amy\n",
+      "Printing from the end\n",
+      "Amy\n",
+      "Norm\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist.printlist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Removing duplictes from an unsorted list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeDuplicates(doublylist1):\n",
+    "    nodeCount = {}\n",
+    "    currentNode = doublylist1.head\n",
+    "    while True:\n",
+    "        if currentNode.data not in nodeCount.keys():\n",
+    "            nodeCount[currentNode.data] = 1\n",
+    "        else:\n",
+    "            nodeCount[currentNode.data] += 1\n",
+    "        if currentNode.next is None:\n",
+    "            while True:\n",
+    "                if currentNode.prev is None:\n",
+    "                    break\n",
+    "                previousNode = currentNode.prev\n",
+    "                if nodeCount[currentNode.data] > 1:\n",
+    "                    currentNode.prev.next = currentNode.next\n",
+    "                    if currentNode.next is not None:\n",
+    "                        currentNode.next.prev = currentNode.prev\n",
+    "                    currentNode.next = None\n",
+    "                    currentNode.prev = None\n",
+    "                    nodeCount[currentNode.data] -=1\n",
+    "                currentNode = previousNode\n",
+    "            break\n",
+    "        currentNode = currentNode.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doublylist1 = DoublyLinkedList()\n",
+    "node1 = Node(13)\n",
+    "node2 = Node(5)\n",
+    "node3 = Node(13)\n",
+    "node4 = Node(2)\n",
+    "node5 = Node(13)\n",
+    "doublylist1.insert(node1)\n",
+    "doublylist1.insert(node2)\n",
+    "doublylist1.insert(node3)\n",
+    "doublylist1.insert(node4)\n",
+    "doublylist1.insert(node5)\n",
+    "removeDuplicates(doublylist1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "13\n",
+      "5\n",
+      "2\n",
+      "Printing from the end\n",
+      "2\n",
+      "5\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "doublylist1.printlist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CHeck if a doubly linked List is a palindrome or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing from the beginning\n",
+      "L\n",
+      "E\n",
+      "V\n",
+      "F\n",
+      "L\n",
+      "Printing from the end\n",
+      "L\n",
+      "F\n",
+      "V\n",
+      "E\n",
+      "L\n"
+     ]
+    }
+   ],
+   "source": [
+    "first = Node('L')\n",
+    "Second = Node('E')\n",
+    "Third = Node('V')\n",
+    "Fourth = Node('F')\n",
+    "Fifth = Node('L')\n",
+    "lis = DoublyLinkedList()\n",
+    "lis.insert(first)\n",
+    "lis.insert(Second)\n",
+    "lis.insert(Third)\n",
+    "lis.insert(Fourth)\n",
+    "lis.insert(Fifth)\n",
+    "lis.printlist()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def palindrome(lis):\n",
+    "    startPointer = lis.head\n",
+    "    endPointer = lis.head\n",
+    "    while endPointer.next is not None:\n",
+    "        endPointer = endPointer.next\n",
+    "    while True:\n",
+    "        if startPointer == endPointer:\n",
+    "            print('List is Palindrone')\n",
+    "            return\n",
+    "        if startPointer.data == endPointer.data:\n",
+    "            startPointer = startPointer.next\n",
+    "            endPointer = endPointer.prev\n",
+    "        else:\n",
+    "            print('List is not Palindrome')\n",
+    "            return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List is not Palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "palindrome(lis)"
    ]
   },
   {
