--- a/Notebook/AVL trees.ipynb
+++ b/Notebook/AVL trees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -17,20 +17,10 @@
      "output_type": "stream",
      "text": [
       "Removing the left node\n",
-      "Rotating to the right on node  5\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Node' object has no attribute 'left_node'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-81a8074ebcfe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    263\u001b[0m \u001b[0mavl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    264\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 265\u001b[1;33m \u001b[0mavl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraverse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    266\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    267\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-18-81a8074ebcfe>\u001b[0m in \u001b[0;36mtraverse\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    166\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtraverse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    167\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 168\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraverse_in_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    169\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    170\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtraverse_in_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-18-81a8074ebcfe>\u001b[0m in \u001b[0;36mtraverse_in_order\u001b[1;34m(self, node)\u001b[0m\n\u001b[0;32m    169\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    170\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mtraverse_in_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 171\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mleft_node\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    172\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtraverse_in_order\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mleft_node\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    173\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Node' object has no attribute 'left_node'"
+      "Rotating to the right on node  5\n",
+      "1 left: NULL right: NULL parent: 3 height: 0\n",
+      "3 left: 1 right: 5 parent: NULL height: 1\n",
+      "5 left: NULL right: NULL parent: 3 height: 0\n"
      ]
     }
    ],
@@ -205,20 +195,20 @@
     "            self.traverse_in_order(self.root)\n",
     "\n",
     "    def traverse_in_order(self, node):\n",
-    "        if node.left_node:\n",
-    "            self.traverse_in_order(node.left_node)\n",
+    "        if node.leftChild:\n",
+    "            self.traverse_in_order(node.leftChild)\n",
     "\n",
     "        l = ''\n",
     "        r = ''\n",
     "        p = ''\n",
     "\n",
-    "        if node.left_node is not None:\n",
-    "            l = node.left_node.data\n",
+    "        if node.leftChild is not None:\n",
+    "            l = node.leftChild.data\n",
     "        else:\n",
     "            l = 'NULL'\n",
     "\n",
-    "        if node.right_node is not None:\n",
-    "            r = node.right_node.data\n",
+    "        if node.rightChild is not None:\n",
+    "            r = node.rightChild.data\n",
     "        else:\n",
     "            r = 'NULL'\n",
     "\n",
@@ -229,66 +219,66 @@
     "\n",
     "        print(\"%s left: %s right: %s parent: %s height: %s\" % (node.data, l, r, p, node.height))\n",
     "\n",
-    "        if node.right_node:\n",
-    "            self.traverse_in_order(node.right_node)\n",
+    "        if node.rightChild:\n",
+    "            self.traverse_in_order(node.rightChild)\n",
     "            \n",
     "    def rotate_right(self, node):\n",
     "        print('Rotating to the right on node ' , node.data)\n",
     "        \n",
-    "        temp_left_node = node.leftChild\n",
-    "        t = temp_left_node.rightChild\n",
+    "        temp_leftChild = node.leftChild\n",
+    "        t = temp_leftChild.rightChild\n",
     "        \n",
-    "        temp_left_node.rightChild = node\n",
+    "        temp_leftChild.rightChild = node\n",
     "        node.leftChild = t\n",
     "        \n",
     "        if t is not None:\n",
     "            t.parent = node\n",
     "            \n",
     "        temp_parent = node.parent\n",
-    "        node.parent = temp_left_node\n",
-    "        temp_left_node.parent  = temp_parent\n",
+    "        node.parent = temp_leftChild\n",
+    "        temp_leftChild.parent  = temp_parent\n",
     "        \n",
-    "        if temp_left_node.parent is not None and temp_left_node.parent.leftChild == node:\n",
-    "            temp_left_node.parent.leftChild = temp_left_node\n",
+    "        if temp_leftChild.parent is not None and temp_leftChild.parent.leftChild == node:\n",
+    "            temp_leftChild.parent.leftChild = temp_leftChild\n",
     "            \n",
-    "        if temp_left_node.parent is not None and temp_left_node.parent.rightChild == node:\n",
-    "            temp_left_node.parent.rightChild = temp_left_node\n",
+    "        if temp_leftChild.parent is not None and temp_leftChild.parent.rightChild == node:\n",
+    "            temp_leftChild.parent.rightChild = temp_leftChild\n",
     "            \n",
     "        if node == self.root:\n",
-    "            self.root = temp_left_node\n",
+    "            self.root = temp_leftChild\n",
     "            \n",
     "        node.height = max(self.calculate_height(node.leftChild) , self.calculate_height(node.rightChild)) + 1\n",
-    "        temp_left_node.height = max(self.calculate_height(temp_left_node.leftChild),\n",
-    "                                   self.calculate_height(temp_left_node.rightChild)) + 1\n",
+    "        temp_leftChild.height = max(self.calculate_height(temp_leftChild.leftChild),\n",
+    "                                   self.calculate_height(temp_leftChild.rightChild)) + 1\n",
     "            \n",
     "    def rotate_left(self , node):\n",
     "        print('Rotating to the left on node' , node.data)\n",
     "        \n",
-    "        temp_right_node = node.rightChild\n",
-    "        t = temp_right_node.leftChild\n",
+    "        temp_rightChild = node.rightChild\n",
+    "        t = temp_rightChild.leftChild\n",
     "        #rotate\n",
     "        \n",
-    "        temp_right_node.leftChild = node\n",
+    "        temp_rightChild.leftChild = node\n",
     "        node.rightChild = t\n",
     "        \n",
     "        if t is not None:\n",
     "            t.parent = node\n",
     "            \n",
     "        temp_parent = node.parent\n",
-    "        node.parent = temp_right_node\n",
-    "        temp_right_node.parent = temp_parent\n",
+    "        node.parent = temp_rightChild\n",
+    "        temp_rightChild.parent = temp_parent\n",
     "        \n",
-    "        if temp_right_node.parent is not None and temp_right_node.parent.leftChild == node:\n",
-    "            temp_right_node.parent.leftChild = temp_right_node\n",
-    "        if temp_right_node.parent is not None and temp_right_node.parent.rightChild == node:\n",
-    "            temp_right_node.parent.rightChild = temp_right_node\n",
+    "        if temp_rightChild.parent is not None and temp_rightChild.parent.leftChild == node:\n",
+    "            temp_rightChild.parent.leftChild = temp_rightChild\n",
+    "        if temp_rightChild.parent is not None and temp_rightChild.parent.rightChild == node:\n",
+    "            temp_rightChild.parent.rightChild = temp_rightChild\n",
     "            \n",
     "        if node == self.root:\n",
-    "            self.root = temp_right_node\n",
+    "            self.root = temp_rightChild\n",
     "            \n",
     "        node.height = max(self.calculate_height(node.leftChild) , self.calculate_height(node.rightChild))\n",
-    "        temp_right_node.height = max(self.calculate_height(temp_right_node.leftChild) ,\n",
-    "                                    self.calculate_height(temp_right_node.rightChild)) + 1\n",
+    "        temp_rightChild.height = max(self.calculate_height(temp_rightChild.leftChild) ,\n",
+    "                                    self.calculate_height(temp_rightChild.rightChild)) + 1\n",
     "            \n",
     "            \n",
     "avl = AVL()\n",
